cabal-version: 3.0
name:          s2n-tls
version:       0.1.0.0
synopsis:      High-level Haskell bindings to s2n-tls
description:
  Safe, high-level Haskell bindings to the s2n-tls library,
  providing memory-safe ForeignPtr wrappers and Haskell-idiomatic
  error handling.

license:       BSD-3-Clause
license-file:  LICENSE
author:        Daniel Goertzen
maintainer:    daniel.goertzen@gmail.com
category:      Network, Cryptography
build-type:    Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:
    S2nTls
    S2nTls.Error
    S2nTls.Types
    S2nTls.Config
    S2nTls.Connection

  build-depends:
    , base        >= 4.14 && < 5
    , bytestring  >= 0.10 && < 0.13
    , network     >= 3.1 && < 3.3
    , s2n-tls-ffi

  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall

test-suite s2n-tls-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: GHC2021
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    , base
    , bytestring
    , s2n-tls
    , s2n-tls-ffi
    , tasty          >= 1.4 && < 1.6
    , tasty-hunit    >= 0.10 && < 0.11
    , process        >= 1.6 && < 1.7
    , network        >= 3.1 && < 3.3
    , temporary      >= 1.3 && < 1.4
    , directory      >= 1.3 && < 1.4
