cabal-version: 3.0
name:          s2n-tls
version:       0.1.0.0
synopsis:      High-level Haskell bindings to s2n-tls
description:
  Safe, high-level Haskell bindings to the s2n-tls library,
  providing memory-safe ForeignPtr wrappers and Haskell-idiomatic
  error handling.

license:       Apache-2.0
license-file:  LICENSE
author:        Daniel Goertzen
maintainer:    daniel.goertzen@gmail.com
copyright:     2026 Daniel Goertzen
category:      Network, Cryptography
build-type:    Simple
tested-with:   GHC == 9.8.2
extra-doc-files:
    CHANGELOG.md
    README.md
homepage:      https://github.com/goertzenator/s2n-tls
bug-reports:   https://github.com/goertzenator/s2n-tls/issues

source-repository head
    type:     git
    location: https://github.com/goertzenator/s2n-tls.git

source-repository this
    type:     git
    location: https://github.com/goertzenator/s2n-tls.git
    tag:      v0.1.0.0

library
  exposed-modules:
    S2nTls
    S2nTls.Error
    S2nTls.Types
    S2nTls.Config
    S2nTls.Connection

  build-depends:
    , base        >= 4.14 && < 5
    , bytestring  >= 0.10 && < 0.13
    , network     >= 3.1 && < 3.3
    , primitive   >= 0.7 && < 0.10
    , s2n-tls-ffi ^>= 0.1

  hs-source-dirs:   src
  default-language: GHC2021
  ghc-options:      -Wall -haddock

test-suite s2n-tls-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: GHC2021
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    , async            >= 2.2 && < 2.3
    , base
    , bytestring
    , QuickCheck       >= 2.14 && < 2.16
    , s2n-tls
    , s2n-tls-ffi
    , tasty            >= 1.4 && < 1.6
    , tasty-hunit      >= 0.10 && < 0.11
    , tasty-quickcheck >= 0.10 && < 0.12
    , process          >= 1.6 && < 1.7
    , network          >= 3.1 && < 3.3
    , temporary        >= 1.3 && < 1.4
    , directory        >= 1.3 && < 1.4
